cmake_minimum_required(VERSION 3.22)
project(OJ_SS1 C)

set(CMAKE_C_STANDARD 11)

add_executable(OJ_SS1
        "Week 10/W10Q1.c"
        "Week 10/W10Q2.c"
        "Week 10/W10Q3.c"
        "Week 12/W12Q1.c"
        "Week 12/W12Q2.c"
        "Week 12/W12Q3.c"
        "Week 12/W12Q4.c"
        "Week 14/W14Q1.c"
        "Week 14/W14Q2.c"
        "Week 15/W15Q1.c"
        "Week 15/W15Q2.c"
        "Week 15/W15Q3.c"
        "Week 15/W15Q4.c"
        "Week 16/W16Q1.c"
        "Week 16/W16Q2.c"
        "Week 16/W16Q3.c"
        "Week 16/W16Q4.c"
        "Week 16/W16Q5.c"
        "Week 2/W2Q1.c"
        "Week 2/W2Q2.c"
        "Week 2/W2Q3.c"
        "Week 2/W2Q4.c"
        "Week 2/W2Q5.c"
        "Week 2/W2Q6.c"
        "Week 3/W3Q1.c"
        "Week 3/W3Q2.c"
        "Week 3/W3Q3.c"
        "Week 3/W3Q4.c"
        "Week 4/W4Q1.c"
        "Week 4/W4Q2.c"
        "Week 4/W4Q3.c"
        "Week 4/W4Q4.c"
        "Week 4/W4Q5.c"
        "Week 4/W4Q6.c"
        "Week 4/W4Q7.c"
        "Week 5/W5Q1.c"
        "Week 5/W5Q2.c"
        "Week 5/W5Q3.c"
        "Week 5/W5Q4.c"
        "Week 6/W6Q1.c"
        "Week 6/W6Q2.c"
        "Week 6/W6Q3.c"
        "Week 6/W6Q4.c"
        "Week 6/W6Q5.c"
        "Week 8/W8Q1.c"
        "Week 8/W8Q2.c"
        "Week 8/W8Q3.c"
        "Week 8/W8Q4.c"
        "Week 9/W9Q1.c"
        "Week 9/W9Q2.c"
        "Week 9/W9Q3.c")
