cmake_minimum_required(VERSION 3.22)
project(OJ_SS2)

set(CMAKE_CXX_STANDARD 14)

add_executable(OJ_SS2
        Week10/AirlineComparison.cpp
        Week10/AirlineComparison_Working.cpp
        Week10/HybridEngine.cpp
        Week10/QueueSecond.cpp
        Week11/countAndSay.cpp
        Week11/ImageIsEverything.cpp
        Week11/Recycle.cpp
        Week11/RecycleSample.cpp
        Week12/HTMISecondSamoel_working.cpp
        Week12/HTML.cpp
        Week12/HTML3.cpp
        Week12/SumOfSubset.cpp
        Week12/tempCodeRunnerFile.cpp
        Week13/Container.cpp
        Week13/CorrectMove.cpp
        Week13/Date.cpp
        Week13/MasterMind.cpp
        Week13/Robot.cpp
        Week13/tempCodeRunnerFile.cpp
        Week13/toString.cpp
        Week14/garbageCollection.cpp
        Week14/stringToOther.cpp
        Week15/2D_Shape.cpp
        Week15/PointAndSegment.cpp
        Week15/Rectangle.cpp
        Week16/tempCodeRunnerFile.cpp
        Week16/Template01.cpp
        Week16/Template02.cpp
        Week17/Circle.cpp
        Week17/set01.cpp
        Week17/set02.cpp
        Week2/OJQ1.cpp
        Week2/OJQ2.cpp
        Week2/OJQ3.cpp
        Week3/Coordinate.cpp
        Week3/Game.cpp
        Week3/Gene.cpp
        Week4/Container.cpp
        Week4/Intersection.cpp
        Week4/LongestSubstring.cpp
        Week5/Container_2_Working_One.cpp
        Week5/Contianer_2.cpp
        Week5/formTriangleOrNot.cpp
        Week5/GO_BoardGame.cpp
        Week5/tempCodeRunnerFile.cpp
        Week6/Coordinate_2.cpp
        Week6/OverloadingMethod.cpp
        Week6/PREMID_1.cpp
        Week6/PREMID_2.cpp
        Week6/PREMID_3.cpp
        Week7/AreaOfTriangle.cpp
        Week7/CollideTriangle.cpp
        Week7/GeometricProgress.cpp
        Week7/Hartal.cpp
        Week7/Perket.cpp
        Week7/PokerCard.cpp
        Week7/SquareNumber.cpp
        Week8/Queue.cpp
        Week8/Stack.cpp
        Week8/tempCodeRunnerFile.cpp
        Week8/TheBigNumber.cpp
        Week9/Canvas.cpp
        Week9/IntersectionLine.cpp
        Week9/MouseClick.cpp
        Week9/tempCodeRunnerFile.cpp)
